--- a/frontend/tips/4-work-with-multiple-windows/_java.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/_java.mdx
@@ -1,113 +1,61 @@
-## Example 1
+import TipCode from "@site/src/components/tipCode";
 
-First let's import our requisite classes (for annotations (e.g., `org.junit.After`, etc.), driving the browser with Selenium (e.g., `org.openqa.selenium.WebDriver`, etc.), and matchers for our assertions (e.g., `org.hamcrest.CoreMatchers`, etc.)) and start our class with some setup and teardown methods.
+## TL;DR - Show Me The Code
 
-```java
-// filename: MultipleWindows.java
+<TipCode
+    codePath={"4-work-with-multiple-windows/code/java/src/test/java/com/elemental/selenium/MultipleWindowsTest.java"}
+    language={"java"}/>
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.openqa.selenium.By;
-import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.firefox.FirefoxDriver;
-import java.util.Set;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.CoreMatchers.*;
+## Code Walkthrough
 
-public class MultipleWindows {
-    WebDriver driver;
+### Importing Libraries, Setup and Teardown
 
-    @Before
-    public void setUp() throws Exception {
-        driver = new FirefoxDriver();
-    }
+First let's import our requisite classes (for annotations (e.g., `org.junit.After`, etc.), driving the
+browser with Selenium (e.g., `org.openqa.selenium.WebDriver`, etc.), and matchers for our assertions
+(e.g., `org.junit.jupiter.api.Assertions`, etc.)), Selenium's wait functions
+(e.g., `org.openqa.selenium.support.ui.WebDriverWait`, etc.), and start our class with some setup and teardown
+methods.
 
-    @After
-    public void tearDown() throws Exception {
-        driver.quit();
-    }
-// ...
-```
+Next, we'll start our class off with some setup and teardown methods, covered in lines 20 to 31.
 
-Now let's write a test that exercises new window functionality from an application. In this case, we'll be using [the new window example](http://the-internet.herokuapp.com/windows) from [the-internet](https://github.com/tourdedave/the-internet).
+### Example 1
 
-```java
-// filename: MultipleWindows.java
-// ...
-    @Test
-    public void multipleWindows() {
-        driver.get("http://the-internet.herokuapp.com/windows");
-        driver.findElement(By.cssSelector(".example a")).click();
-        Object[] allWindows = driver.getWindowHandles().toArray();
-        driver.switchTo().window(allWindows[0].toString());
-        assertThat(driver.getTitle(), is(not("New Window")));
-        driver.switchTo().window(allWindows[1].toString());
+Line 34 shows a test that exercises new window functionality from an application. In this case, we'll be using
+[the new window example](http://the-internet.herokuapp.com/windows) from [the-internet](https://github.com/saucelabs/the-internet).
 
-        Thread.sleep(2000);
-        assertThat(driver.getTitle(), is("New Window"));
-        Thread.sleep(2000);
-    }
-// ...
-```
+After loading the page we click the link which spawns a new window. We then grab the window handles (a.k.a. unique
+identifier strings which represent each open browser window) and switch between them based on their order (assuming
+that the first one is the originating window, and that the second one is the new window). We round this test out by
+performing a simple check against the title of the page to make sure Selenium is focused on the correct window.
 
-After loading the page we click the link which spawns a new window. We then grab the window handles (a.k.a. unique identifier strings which represent each open browser window) and switch between them based on their order (assuming that the first one is the originating window, and that the second one is the new window). We round this test out by performing a simple check against the title of the page to make sure Selenium is focused on the correct window.
-
-While this may seem like a good approach, it can present problems later. That's because the order of the window handles is not consistent across all browsers. Some return it in the order opened, others _alphabetically_.
+While this may seem like a good approach it can present problems later because the order of the window handles is not
+consistent across all browsers. Some return it in the order opened, others _alphabetically_.
 
 Here's a more resilient approach. One that will work across all browsers.
 
-## Example 2
+### Example 2
 
-```java
-// filename: MultipleWindows.java
-// ...
-    @Test
-    public void multipleWindowsRedux() {
-        driver.get("http://the-internet.herokuapp.com/windows");
-        String firstWindow = driver.getWindowHandle();
-        String newWindow = "";
-        driver.findElement(By.cssSelector(".example a")).click();
-        Set<String> allWindows = driver.getWindowHandles();
+Line 46 shows that after loading the page we store the window handle in a variable (e.g., `firstWindow`) and then
+proceed with clicking the new window link.
 
-        for (String window : allWindows) {
-            if (!window.equals(firstWindow)) {
-                newWindow = window;
-            }
-        }
+Now that we have two windows open we grab all the window handles and search through them to find the new window
+handle (e.g., the handle that doesn't match the one we've already stored). We store the new window result in another
+variable (e.g., `newWindow`) and then switch between the windows, checking the page title each time to make sure
+the correct window is in focus.
 
-        driver.switchTo().window(firstWindow);
-        assertThat(driver.getTitle(), is(not(equalTo("New Window"))));
+For more information about switching windows (and tabs) visit the official Selenium
+[documentation page](https://www.selenium.dev/documentation/webdriver/interactions/windows/).
 
-        driver.switchTo().window(newWindow);
 
-        Thread.sleep(2000);
-        assertThat(driver.getTitle(), is(equalTo("New Window")));
-        Thread.sleep(2000);
-    }
+### Executing the Test
 
-}
-```
+Before executing the test, we need to make sure the required dependencies are declared on the `pom.xml` file.
 
-After loading the page we store the window handle in a variable (e.g., `firstWindow`) and then proceed with clicking the new window link.
+<details>
+    <summary>Toggle to see the <code>pom.xml</code> file.</summary>
+    <div>
+        <TipCode codePath={"4-work-with-multiple-windows/code/java/pom.xml"} language={"xml"}/>
+    </div>
+</details>
 
-Now that we have two windows open we grab all of the window handles and search through them to find the new window handle (e.g., the handle that doesn't match the one we've already stored). We store the new window result in another variable (e.g., `newWindow`) and then switch between the windows, checking page title each time to make sure the correct window is in focus.
-
-## Expected Behavior
-
-If you save this file and run it (e.g., `mvn clean test` from the command-line) here is what will happen for either example:
-
-- Open the browser
-- Visit the page
-- Click to open a new window
-- Switch between the windows
-- Check the page title to make sure the correct window is in focus
-- Close the browser
-
-## Summary
-
-I hope this was a helpful guide on how to work with and switch between multiple windows using Selenium.
-
-Thanks to [Jim Evans](https://twitter.com/jimevansmusic) for providing the info for this tip, and [Roman Isko](https://github.com/RomanIsko) for the initial code contribution.
-
-For more information about switching windows (and tabs) visit the official Selenium HQ [documentation page](https://www.selenium.dev/documentation/webdriver/interactions/windows/).
+Finally, we can run the test by executing `mvn test` from the command-line.
