--- a/frontend/tips/4-work-with-multiple-windows/_ruby.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/_ruby.mdx
@@ -1,95 +1,54 @@
-## Example 1
+import TipCode from "@site/src/components/tipCode";
 
-First, let's pull in our requisite libraries (e.g., `selenium-webdriver` to control the browser and `rspec/expectations` & `RSpec::Matchers` for our assertions) and add some simple `setup`, `teardown`, and `run` methods.
+## TL;DR - Show Me The Code
 
-```ruby
-# filename: new_window.rb
+<TipCode codePath={"4-work-with-multiple-windows/code/ruby/windows.rb"} language={"ruby"}/>
 
-require 'selenium-webdriver'
-require 'rspec/expectations'
-include RSpec::Matchers
+## Code Walkthrough
 
-def setup
-  @driver = Selenium::WebDriver.for :firefox
-end
+### Importing Libraries, Setup and Teardown
 
-def teardown
-  @driver.quit
-end
+We'll first need to pull in our requisite libraries (`selenium-webdriver` to drive the browser, and
+`rspec/expecations` & `RSpec::Matchers` to perform our assertions) and wire up some simple `setup`, `teardown`,
+and `run` methods.
 
-def run
-  setup
-  yield
-  teardown
-end
-```
+### Example 1
 
-Now let's write a test that exercises new window functionality from an application. In this case, we'll be using [the new window example](http://the-internet.herokuapp.com/windows) found on [the-internet](https://github.com/tourdedave/the-internet).
+Line 19 shows a test that exercises new window functionality from an application. In this case, we'll be using
+[the new window example](http://the-internet.herokuapp.com/windows) from [the-internet](https://github.com/saucelabs/the-internet).
 
-```ruby
-# filename: new_window.rb
+After loading the page we click the link which spawns a new window. We then grab the window handles (a.k.a. unique
+identifier strings which represent each open browser window) and switch between them based on their order (assuming
+that the first one is the originating window, and that the second one is the new window). We round this test out by
+performing a simple check against the title of the page to make sure Selenium is focused on the correct window.
 
-# ...
-
-run do
-  @driver.get 'http://the-internet.herokuapp.com/windows'
-  @driver.find_element(css: '.example a').click
-  @driver.switch_to.window(@driver.window_handles.first)
-  expect(@driver.title).not_to eql 'New Window'
-  @driver.switch_to.window(@driver.window_handles.last)
-  expect(@driver.title).to eql 'New Window'
-end
-```
-
-After loading the page we click the link which spawns a new window. We then grab the window handles (a.k.a. unique identifier strings which represent each open browser window) and switch between them based on their order (assuming that the first one is the originating window, and that the last one is the new window). We round this test out by performing a simple check against the title of the page to make sure Selenium is focused on the correct window.
-
-While this may seem like a good approach, it can present problems later. That's because the order of the window handles is not consistent across all browsers. Some return in the order opened, others alphabetically.
-
-## Example 2
+While this may seem like a good approach it can present problems later because the order of the window handles is not
+consistent across all browsers. Some return it in the order opened, others _alphabetically_.
 
 Here's a more resilient approach. One that will work across all browsers.
 
-```ruby
-# filename: new_window.rb
+### Example 2
 
-run do
-  @driver.get 'http://the-internet.herokuapp.com/windows'
+Line 31 shows that after loading the page we store the window handles in a variable (e.g., `first_window`)
+and then proceed with clicking the new window link.
 
-  first_window = @driver.window_handle
-  @driver.find_element(css: '.example a').click
-  all_windows = @driver.window_handles
-  new_window = all_windows.select { |this_window| this_window != first_window }
+Now that we have two windows open we grab all of the window handles and search through them to find the new window
+handle (e.g., the handle that doesn't match the first one we've already stored). We store the result in another
+variable (e.g., `second_window`) and then switch between the windows. Each time checking the page title to make sure
+the correct window is in focus.
 
-  @driver.switch_to.window(first_window)
-  expect(@driver.title).not_to eql 'New Window'
+For more information about switching windows (and tabs) visit the official Selenium
+[documentation page](https://www.selenium.dev/documentation/webdriver/interactions/windows/).
 
-  @driver.switch_to.window(new_window)
-  expect(@driver.title).to eql 'New Window'
-end
-```
+### Executing the Test
 
-After loading the page we store the window handle in a variable (e.g., `first_window`) and then proceed with clicking the new window link.
+Before executing the test, we need to make sure the required dependencies are declared on the `Gemfile` file.
 
-Now that we have two windows open we grab all of the window handles and search through them to find the new window handle (e.g., the handle that doesn't match the first one we've already stored). We store the result in another variable (e.g., `second_window`) and then switch between the windows. Each time checking the page title to make sure the correct window is in focus.
+<details>
+    <summary>Toggle to see the <code>Gemfile</code> file.</summary>
+    <div>
+        <TipCode codePath={"4-work-with-multiple-windows/code/ruby/Gemfile"} language={"txt"}/>
+    </div>
+</details>
 
-## Expected Behavior
-
-+ Open the browser
-+ Visit the page
-+ Find the window handle for the current window
-+ Click a link that opens a new window
-+ Find the window handle out of all available window handles
-+ Switch between the windows
-+ Assert that the correct window is in focus
-+ Close the browser
-
-## Summary
-
-I hope this was a helpful guide on how to work with and switch between multiple windows using Selenium.
-
-Thanks to [Jim Evans](https://twitter.com/jimevansmusic) for providing the info for this tip.
-
-For more information about switching windows (and tabs) visit the official Selenium HQ [documentation page] (https://www.selenium.dev/documentation/webdriver/interactions/windows/).
-
-Happy Testing!
-
+Finally, we can run the test by executing `ruby windows.rb` from the command-line.
