--- a/frontend/tips/4-work-with-multiple-windows/main.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/main.mdx
@@ -90,6 +90,12 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
     description={"Python code review"}
     url={"https://github.com/bittner"}
 />
+<DefaultAvatar
+    name="Jonathan Taylor"
+    imgSrc={"https://github.com/jtay2380.png"}
+    description={"Contributed the initial C# code for this tip."}
+    url={"https://github.com/jtay2380"}
+/>
 
 ## Authors
 
